--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.13.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/com.google.guava_10.0.1.v201203051515.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-testframework-3.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-dbcp-1.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-exec-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-jxpath-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-2.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jgrapht.jar"/>
+	<classpathentry kind="src" path="resources"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-collections-testframework-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-dbcp-1.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-exec-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-jxpath-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jgrapht.jar"/>
 	<classpathentry kind="lib" path="lib/owlapi-bin.jar" sourcepath="C:/Users/Ferd/Desktop/eclipse/owlapi-src.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/thinklab-api"/>
-	<classpathentry kind="lib" path="lib/reflections-0.9.5.jar"/>
-	<classpathentry kind="lib" path="lib/mvel2-2.0.7.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-core.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-owlapiv3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/reflections-0.9.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mvel2-2.0.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pellet-core.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pellet-owlapiv3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
